$Id$


v0.61.1		20-Jun-2004.

	upgrade:
		If you compiled with ./configure --enable-newsgate you may
		need to erase the newsgroup names in the echomail areas you
		don't want to gate to news.

	general:
		Added compile directive for full newsgate. If this switch is
		used then mbfido behaves like it did upto version 0.50.0 and
		mbnntp is disabled.

	mbfido:
		Added compile directive for full newsgate.

	mbnntp:
		If compiled in full newsmode, this program acts like a dummy.

	mbsebbs:
		Added user@domain login for pop3 mailboxes.
		If pop3 login fails, the bbs won't hang.
		If a users homedirectory doesn't exist, a correct error message
		is displayed and logged.

	mbsetup:
		Added user@domain login for pop3 servers in screen 1.12.
		Added compile directive for full newsgate to prevent newsgroup
		name creation in default compiled mode.


v0.61.0		06-Jun-2004 - 20-Jun-2004

	libnodelist.a:
		Implemented the ICM flag (FSP-1033).

	mbmsg:
		With te post command, the right number of commandline options
		is checked, if this is wrong the help message is displayed.
		If a message is posted in a local area, no echomail.jam is
		updated and the mailout semafore is not set.
		Added checks in the mbmsg post command if the To parameter has
		the correct syntax for netmail and all other areas.
		Fixed parameter count if post is used with the -q option.
		Will now return a non-zero error if the post() function
		failed.

	mbout:
		Implemented the ICM flag (FSP-1033).

	mbcico:
		Implemented the ICM flag (FSP-1033).

	mbtask:
		Implemented the ICM flag (FSP-1033).

	mbfile:
		The filenames in the html pages are now the long filenames.
		This fixes download problems with some mangled 8.3 filenames.

	mbsetup:
		In mail and files group edit screens, to make an area active
		existing connections check is skipped.
		If a node record is deleted, the outbox and directory paths
		are removed as well if they are empty.


v0.60.0         09-Feb-2004 - 04-Jun-2004


        upgrade: